--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -82,6 +82,8 @@ ECL 8.9.0:
 
  - Binary streams now can only read or write bytes whose size is a multiple of 8.
 
+* Streams:
+
  - ECL has now a new and more easily extensible implementation of streams, based
    on C structures with a method dispatch table. Apart from code reuse and better
    maintainability, this allows a more sensible design of read/write-sequence.
@@ -92,6 +94,11 @@ ECL 8.9.0:
 
  - Internally, ECL allows to work with POSIX file descriptors directly, without
    using C streams.
+
+ - POSIX files and C streams now support different external formats. ECL
+   understands right now :UTF-8, :UCS-2 (bigendian), :UCS-4 (bigendian),
+   :LATIN-1 and :ISO-8859-1. If built _without_ support for Unicode, only the
+   last two are available.
 
 * Embedding:
 
