Replaced EXT:SET-STACK-SIZE with the pair EXT:SET/GET-LIMIT which also allows to adjust the heap size.

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -204,7 +204,7 @@ ECL 8.9.0:
 		(handler-bind ((ext:stack-overflow #'handle-overflow))
 		  (foo 1))))
 
- - New function (EXT:SET-STACK-SIZE type size) can resize type =
+ - New function (EXT:SET-LIMIT type size) can resize type =
    EXT:BINDING-STACK, EXT:LISP-STACK and EXT:FRAME-STACK.
 
  - FLOAT-SIGN returns the right value on negative zeros.
