--- a/src/clx/README
+++ b/src/clx/README
@@ -18,7 +18,7 @@ a selection of patches were added from other CLXes around the net.
 
 This CLX distribution is intended to work under the latest released
 version of SBCL - please report the bug if it doesn't.  It should
-usually also work with earlier versions back to 0.8.1, and possibly
+usually also work with earlier versions back to 0.9.0, and possibly
 earlier still, but may need manual adjustment to the clx.asd file (to
 remove use of newly-introduced features).
 
@@ -32,8 +32,12 @@ send mail describing the process so that future versions can incorporate
 your instructions.
 
 If you are following SBCL CVS and this CLX does not run in it, please
-check the CVS tree for this CLX distribution to see if your bug has
-been fixed already.  See http://cvs.telent.net/ for details
+check the darcs repositor{y,ies} for this CLX distribution to see if
+your bug has been fixed already.
+
+darcs get http://verisons.telent.net/clx # version from which releases are made
+          http://common-lisp.net/~crhodes/clx # patches merged by Christophe
+          http://monday-monkey.com/repos/clx/ # OpenMCL tree by bryan o'connor?
 
 = Building using asdf-install
 
@@ -105,4 +109,4 @@ Note that your post will be held for approval if you are not subscribed.
 -- 
 Heavy lifting by <Raymond.Wiker at fast.no>
 ASDFized version and ongoing by Daniel Barlow <dan at metacircles.com> 
-and Christophe Rhodes <csr21 at cam.ac.uk>
+and (mostly, these days) Christophe Rhodes <csr21 at cam.ac.uk>
