--- a/src/clx/manual/clx.texinfo
+++ b/src/clx/manual/clx.texinfo
@@ -1,23 +1,17 @@
 \input texinfo   @c -*-texinfo-*-
-@c $Id$
+@c $Id: clx.texinfo,v 1.3 2004/11/18 12:01:48 dan Exp $
 @c %**start of header
 @setfilename clx.info
 @settitle Common LISP X Interface
 @setchapternewpage odd
 @c %**end of header
 
-@dircategory Lisp Programming
+@dircategory lisp
 @direntry
-* CLX: (clx).		Common LISP X Interface
+* CLX: (clx).           Common LISP X Interface
 @end direntry
 
-
-@titlepage
-@title The Common Lisp X Interface (CLX)
-
-@page
-@vskip 0pt plus 1filll
-@c @copying
+@copying
 The Common LISP X Interface (CLX)
 
 Copyright @copyright{} 1988, 1989 Texas Instruments Incorporated
@@ -32,7 +26,14 @@ described herein for any purpose. It is provided "as is" without
 express or implied warranty.
 @end quotation
 
-@c @end copying
+@end copying
+
+@titlepage
+@title The Common Lisp X Interface (CLX)
+
+@page
+@vskip 0pt plus 1filll
+@insertcopying
 @end titlepage
 
 @contents
@@ -41,22 +42,7 @@ express or implied warranty.
 @node Top, Acknowledgments, (dir), (dir)
 @top The Common LISP X Interface (CLX)
 
-@c @copying
-The Common LISP X Interface (CLX)
-
-Copyright @copyright{} 1988, 1989 Texas Instruments Incorporated
-
-@quotation
-Permission is granted to any individual or institution to use, copy,
-modify and distribute this document, provided that this complete
-copyright and permission notice is maintained, intact, in all copies
-and supporting documentation. Texas Instruments Incorporated makes no
-representations about the suitability of this document or the software
-described herein for any purpose. It is provided "as is" without
-express or implied warranty.
-@end quotation
-
-@c @end copying
+@insertcopying
 @end ifnottex
 
 @menu
@@ -254,6 +240,8 @@ Extensions
 * Extensions (Extensions)::
 * SHAPE - The X11 Nonrectangular Window Shape Extension::
 * RENDER - A new rendering system for X11::
+* DPMS - The X11 Display Power Management Signaling Extension::  
+* BIG-REQUESTS - Big Requests Extension::  
 
 RENDER - A new rendering system for X11
 
@@ -2121,8 +2109,13 @@ return information about the display.  This section discusses how to:
 @section Opening the Display
 
 
-The @var{open-display} function is used to open a connection to an X
-server.
+The @var{open-display} and @var{open-default-display} functions are
+used to open a connection to an X server.  @var{open-default-display}
+is an extension that is not present in the MIT CLX tree, but is
+preferred where available as it uses the same rules for display
+defaulting as the C Xlib bindings, and tends to get authorization
+right more often than @var{open-display} (particularly on
+ssh-forwarded connections)
 
 @defun open-display host &key :display :protocol
 
@@ -2161,6 +2154,49 @@ Type @var{display}.
 
 @end defun
 
+@defun open-default-display &optional display-name
+
+@table @var
+@item display-name
+The display to connect to.  Display names have the format
+
+@verbatim
+  [protocol/] [hostname] : [:] displaynumber [.screennumber]
+@end verbatim
+
+There are two special cases in parsing, to match that done in the Xlib
+C language bindings
+
+@itemize @bullet
+@item If the hostname is @code{unix} or the empty string, any supplied
+protocol is ignored and a connection is made using the @code{local} transport.
+@item If a double colon separates @var{hostname} from @var{displaynumber}, the
+protocol is assumed to be @code{decnet}.
+@end itemize
+
+If @var{display-name} is not supplied, a default will be provided
+appropriate for the local environment: on a POSIX system - the only
+kind this CLX port runs on - the default display is taken from the
+environment variable @env{DISPLAY}.  See also the section ``DISPLAY
+NAMES'' in X(7)
+
+@end table
+
+Open a connection to @var{display-name} or to the appropriate
+default display.
+
+@code{open-display-name} always attempts to do display authorization,
+following complicated rules that closely match the ones that the C
+Xlib bindings use.  Briefly: the hostname is resolved to an address,
+then authorization data for the (protocol, host-address,
+displaynumber) triple is looked up in the file given by the
+environment variable @env{AUTHORITY_PATHNAME} (typically
+@file{$HOME/.Xauthority}).  If the protocol is @code{:local}, or if
+the hostname resolves to the local host, authority data for the local
+machine's actual hostname - as returned by gethostname(3) - is used
+instead.
+
+@end defun
 
 @node Display Attributes, Managing the Output Buffer, Opening the Display, Displays
 @section Display Attributes
@@ -15654,9 +15690,11 @@ of zero is a hint that no repetition should occur.
 @node Extensions, Errors, Control Functions, Top
 @chapter Extensions
 @menu
-* Extensions (Extensions)::
-* SHAPE - The X11 Nonrectangular Window Shape Extension::
-* RENDER - A new rendering system for X11::
+* Extensions (Extensions)::     
+* SHAPE - The X11 Nonrectangular Window Shape Extension::  
+* RENDER - A new rendering system for X11::  
+* DPMS - The X11 Display Power Management Signaling Extension::  
+* BIG-REQUESTS - Big Requests Extension::  
 @end menu
 
 @node Extensions (Extensions), SHAPE - The X11 Nonrectangular Window Shape Extension, Extensions, Extensions
@@ -15744,7 +15782,7 @@ Type @var{card8} or @var{null}.
 
 This documentation is yet to be written.
 
-@node RENDER - A new rendering system for X11,  , SHAPE - The X11 Nonrectangular Window Shape Extension, Extensions
+@node RENDER - A new rendering system for X11, DPMS - The X11 Display Power Management Signaling Extension, SHAPE - The X11 Nonrectangular Window Shape Extension, Extensions
 @section RENDER - A new rendering system for X11
 
 
@@ -16082,8 +16120,143 @@ Requests the sequence of glyphs to be drawn with the glyph-set.
 
 What new errors Xrender defines...
 
-@node Errors, Undocumented, Extensions, Top
+
+@node  DPMS - The X11 Display Power Management Signaling Extension, BIG-REQUESTS - Big Requests Extension, RENDER - A new rendering system for X11, Extensions
+@section DPMS - The X11 Display Power Management Signaling Extension
+
+@defun dpms-get-version display &optional (major-version 1) (minor-version 1)
+@table @var
+@item display
+@var{display}
+@item major-version
+@var{card16}
+@item minor-version
+@var{card16}
+@end table
+
+
+Return two values: the major and minor version of the DPMS
+implementation the server supports.
+
+If supplied, the @var{major-version} and @var{minor-version}
+indicate what version of the protocol the client wants the server to
+implement.
+@end defun
+
+@defun dpms-capable display
+@table @var
+@item display
+@var{display}
+@end table
+
+
+True if the currently running server's devices are capable of DPMS
+operations.
+
+The truth value of this request is implementation defined, but is
+generally based on the capabilities of the graphic card and monitor
+combination.  Also, the return value in the case of heterogeneous
+multi-head servers is implementation defined.
+@end defun
+
+
+@defun dpms-get-timeouts display
+@table @var
+@item display
+@var{display}
+@end table
+
+
+Return three values: the current values of the DPMS timeout values.
+The timeout values are (in order returned): standby, suspend and off.
+All values are in units of seconds.  A value of zero for any timeout
+value indicates that the mode is disabled.
+@end defun
+
+@defun dpms-set-timeouts display standby suspend off
+@table @var
+@item display
+@var{display}
+@item standby
+@var{card16}
+@item suspend
+@var{card16}
+@item off 
+@var{card16}
+@end table
+
+
+Set the values of the DPMS timeouts.  All values are in units of
+seconds.  A value of zero for any timeout value disables that mode.
+@end defun
+ 
+@defun dpms-enable display
+@table @var
+@item display
+@var{display}
+@end table
+
+
+Enable the DPMS characteristics of the server using the server's
+currently stored timeouts.  If DPMS is already enabled, no change is
+affected.
+@end defun
+
+@defun dpms-disable display
+@table @var
+@item display
+@var{display}
+@end table
+
+
+Disable the DPMS characteristics of the server.  It does not affect
+the core or extension screen savers.  If DPMS is already disabled, no
+change is effected.
+
+This request is provided so that DPMS may be disabled without damaging
+the server's stored timeout values.
+@end defun
+
+@defun dpms-force-level display power-level
+@table @var
+@item display
+@var{display}
+@item power-level
+(member :dpms-mode-on :dpms-mode-standby :dpms-mode-suspend :dpms-mode-off)
+@end table
+
+
+Forces a specific DPMS level on the server.
+@end defun
+
+@defun dpms-info display
+@table @var
+@item display
+@var{display}
+@end table
+
+
+Returns two values: the DPMS power-level and state value for the
+display.
+
+State is one of the keywords DPMS-ENABLED or DPMS-DISABLED.  
+
+If state is DPMS-ENABLED, then power-level is returned as one of the
+keywords DPMS-MODE-ON, DPMS-MODE-STANDBY, DPMS-MODE-SUSPEND or
+DPMS-MODE-OFF.  If state is DPMS-DISABLED, then power-level is
+undefined and returned as NIL.
+@end defun
+
+@node BIG-REQUESTS - Big Requests Extension, , DPMS - The X11 Display Power Management Signaling Extension, Extensions
+@section BIG-REQUESTS - Big Requests Extension
+
+@defun display-extended-max-request-length display
+@end defun
+@defun enable-big-requests display
+@end defun
+
 @chapter Errors
+@node Errors, Undocumented, Extensions, Top
 
 @menu
 * Introduction (Errors)::
