Do not ignore the :type option in slot definitions. When canonicalizing slots, only output options that were supplied.

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -31,6 +31,8 @@ ECL 9.1.0:
 
  - (SXHASH -0.0) != (SXHASH 0.0)
 
+ - In DEFCLASS, the :type of slots was ignored.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
