--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -25,9 +25,9 @@ ECL 9.1.0:
    as a base-string.
 
  - ECL supports external formats. They may be a symbol, denoting the encoding
-   or an encoding option, or a list of symbols. Valid symbols are :DEFAULT,
-   :LATIN-1, :ISO-8859-1, :UTF-8, :UCS-{2,4}{,BE,LE} :CR, :LF and :CRLF. Default
-   option is :LF.
+   or an encoding option, an association table between bytes and unicode codes
+   or a list of these. Valid symbols are :DEFAULT, :LATIN-1, :ISO-8859-1,
+   :UTF-8, :UCS-{2,4}{,BE,LE} :CR, :LF and :CRLF. Default option is :LF.
 
 * Bugs fixed:
 
