--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -49,7 +49,8 @@ ECL 9.1.0:
    the right value, and with Gray streams, which output NIL.
 
  - When ECL is built with --enable-unicode, it uses its own database for
-   Unicode properties instead of tolower, toupper, etc.
+   Unicode properties instead of tolower, toupper, etc (Based on code
+   from SBCL)
 
 * AMOP:
 
